feat: update for Feb 26

--- a/resume.tex
+++ b/resume.tex
@@ -116,20 +116,21 @@
             \resumeSubheadingShort
                 {Lockheed Martin, RMS $|$ Mount Laurel, NJ}{Aug 2022 - Current}
 
-                \resumeSubSubheading{Software Engineer $|$ Test Automation}{Oct 2023 - Current}
+                \resumeSubSubheading{Full Stack Engineer II $|$ Cloud}{December 2025 - Current}
                     \resumeItemListStart
                         \resumeItem{
-                            Developed and maintained proprietary automated testing framework for end-to-end regression 
-                            testing of mission-critical systems using Python, Jenkins, and Gitlab CI/CD. Utilization of this testing
-                            framework has estimated cost-savings in development time of over \$500,000 a year.
+                            Engineered and managed production-grade Kubernetes clusters using Helm.
+                            Streamlined the deployment of core services including Keycloak and Kafka
+                            across restricted, air-gapped environments.
                         }
                         \resumeItem{
-                            Collaborated closely with customer program leadership to drive development priorities and improve
-                            product reliability. Created quality and expectation documentation for functional and performance metrics.
+                            Architected a comprehensive monitoring stack using Prometheus, Grafana, and Loki
+                            to provide real-time visibility and log aggregation for mission-critical DOD
+                            infrastructure.
                         }
                         \resumeItem{
-                            Architected and developed automated testing tools in Python, which helped save \$200,000
-                            in development costs year-over-year
+                            Implemented STIG compliance and navigate security compliance requirements to ensure
+                            all deployments meet the highest security standards.
                         }
                     \resumeItemListEnd
 
@@ -145,6 +146,23 @@
                         \resumeItem{
                             Coordinated efforts between functional products to develop automated deployment tool for container,
                             virtual, and baremetal deployments with estimated cost savings of \$1,000,000 year-over-year.
+                        }
+                    \resumeItemListEnd
+
+                \resumeSubSubheading{Software Engineer II $|$ Test Automation}{Oct 2023 - December 2025}
+                    \resumeItemListStart
+                        \resumeItem{
+                            Developed and maintained proprietary automated testing framework for end-to-end regression 
+                            testing of mission-critical systems using Python, Jenkins, and Gitlab CI/CD. Utilization of this testing
+                            framework has estimated cost-savings in development time of over \$500,000 a year.
+                        }
+                        \resumeItem{
+                            Collaborated closely with customer program leadership to drive development priorities and improve
+                            product reliability. Created quality and expectation documentation for functional and performance metrics.
+                        }
+                        \resumeItem{
+                            Architected and developed automated testing tools in Python, which helped save \$200,000
+                            in development costs year-over-year
                         }
                     \resumeItemListEnd
 
@@ -200,8 +218,8 @@
         \begin{itemize}[leftmargin=0.15in, label={}]
             \small{\item{
                 \textbf{Programming Languages}{: Python, Bash, Go, Groovy/Java, Rust, C++, SQL}\\
-                \textbf{OS Platforms}{: UNIX (Solaris 8,9,10), RHEL (6,7,8,9), Ubuntu, Linux 5/6}\\
-                \textbf{CI Tools}{: Jenkins/Hudson, GitLab}\\
+                \textbf{OS Platforms}{: UNIX (Solaris 8,9,10), RHEL (6,7,8,9), Ubuntu, Linux 5/6, NixOS}\\
+                \textbf{CI Tools}{: Jenkins/Hudson, GitLab, ArgoCD, FluxCD }\\
                 \textbf{Configuration Management}{: Ansible, Nix, Nginx, Chef, Puppet, ANT, Maven, Make}\\
                 \textbf{Provisioning Tools}{: Terraform, Azure Resource Manager (ARM), Kubernetes, Docker, MiniKube}\\
                 \textbf{Virtualization}{: VMWare, Vagrant, KVM}
