feat: update resume to html format and include dark and light modes

--- a/resume.tex
+++ b/resume.tex
@@ -100,15 +100,15 @@
         \vspace{6pt}
     \end{center}
 
-    \section{Education}
-        \resumeSubHeadingListStart
-            \resumeSubheading
-                {Rowan University}{Glassboro, NJ}
-                {Bachelor Computing and Informatics, Minor CyberSecurity}{2016 - 2020}
-            \resumeSubheading
-                {Rowan University}{Glassboro, NJ}
-                {Bachelor Emergency Management and Homeland Security, Minor Counter-Terrorism}{2016-2020}
-        \resumeSubHeadingListEnd
+    \section{Summary}
+        \small{
+            Full Stack and DevSecOps Engineer with 5+ years of experience building mission-critical
+            software for DOD programs at Lockheed Martin. Proven track record of delivering scalable
+            infrastructure solutions, automated testing frameworks, and CI/CD pipelines in classified,
+            air-gapped environments. Adept at bridging engineering and security compliance to drive
+            measurable cost savings and operational efficiency.
+        }
+        \vspace{4pt}
 
 
     \section{Work Experience}
@@ -116,7 +116,7 @@
             \resumeSubheadingShort
                 {Lockheed Martin, RMS $|$ Mount Laurel, NJ}{Aug 2022 - Current}
 
-                \resumeSubSubheading{Full Stack Engineer II $|$ Cloud}{December 2025 - Current}
+                \resumeSubSubheading{Full Stack Engineer II $|$ Cloud (Current Role)}{December 2025 - Current}
                     \resumeItemListStart
                         \resumeItem{
                             Engineered and managed production-grade Kubernetes clusters using Helm.
@@ -134,26 +134,11 @@
                         }
                     \resumeItemListEnd
 
-                \resumeSubSubheading{Software Engineer $|$ DevSecOps}{February 2023 - Current}
+                \resumeSubSubheading{Software Engineer II $|$ Test Automation (Concurrent with DevSecOps)}{Oct 2023 - December 2025}
                     \resumeItemListStart
                         \resumeItem{
-                            Developed inner-source data-analysis python library for proprietary data formats, reducing
-                            data-analysis time for users by 75\% and saving over \$750,000 in labor costs per year.
-                        }
-                        \resumeItem{
-                            Created End-To-End CI/CD deployment pipelines using Docker, Vagrant, Splunk, Ansible, and GitLab
-                        }
-                        \resumeItem{
-                            Coordinated efforts between functional products to develop automated deployment tool for container,
-                            virtual, and baremetal deployments with estimated cost savings of \$1,000,000 year-over-year.
-                        }
-                    \resumeItemListEnd
-
-                \resumeSubSubheading{Software Engineer II $|$ Test Automation}{Oct 2023 - December 2025}
-                    \resumeItemListStart
-                        \resumeItem{
-                            Developed and maintained proprietary automated testing framework for end-to-end regression 
-                            testing of mission-critical systems using Python, Jenkins, and Gitlab CI/CD. Utilization of this testing
+                            Developed and maintained proprietary automated testing framework for end-to-end regression
+                            testing of mission-critical systems using Python, Jenkins, and GitLab CI/CD. Utilization of this testing
                             framework has estimated cost-savings in development time of over \$500,000 a year.
                         }
                         \resumeItem{
@@ -162,7 +147,22 @@
                         }
                         \resumeItem{
                             Architected and developed automated testing tools in Python, which helped save \$200,000
-                            in development costs year-over-year
+                            in development costs year-over-year.
+                        }
+                    \resumeItemListEnd
+
+                \resumeSubSubheading{Software Engineer $|$ DevSecOps (Concurrent with Test Automation)}{February 2023 - December 2025}
+                    \resumeItemListStart
+                        \resumeItem{
+                            Built inner-source data-analysis Python library for proprietary data formats, reducing
+                            data-analysis time for users by 75\% and saving over \$750,000 in labor costs per year.
+                        }
+                        \resumeItem{
+                            Created End-To-End CI/CD deployment pipelines using Docker, Vagrant, Splunk, Ansible, and GitLab.
+                        }
+                        \resumeItem{
+                            Coordinated efforts between functional products to develop automated deployment tool for container,
+                            virtual, and baremetal deployments with estimated cost savings of \$1,000,000 year-over-year.
                         }
                     \resumeItemListEnd
 
@@ -172,16 +172,16 @@
                             Worked on-site with foreign military customers to troubleshoot and update software builds.
                         }
                         \resumeItem{
-                            Coordinate, Develop, and execute detailed test procedures for software products.
+                            Coordinated, developed, and executed detailed test procedures for software products.
                         }
                         \resumeItem{
-                            Developed post-test data analysis tool for automated reporting utilizing Python, Matlab and Tableau.
+                            Developed post-test data analysis tool for automated reporting utilizing Python, Matlab, and Tableau.
                         }
                         \resumeItem{
                             Developed new, and modified existing software requirement documentation utilizing Jazz and DOORS.
                         }
                     \resumeItemListEnd
-            
+
             \resumeSubheadingShort
                 {Stilog I.S.T $|$ NY, NY}{Jan 2021 - Aug 2022}
                 \resumeItemListStart
@@ -190,26 +190,7 @@
                     \resumeItem{Created comprehensive business requirement documentation to translate customer needs into actionable designable plans.}
                     \resumeItem{Maintained deployment of customer products using Azure and AWS.}
                 \resumeItemListEnd
-            
-            
-    \section{Projects}
-        \resumeSubHeadingListStart
-            \resumeProjectHeading
-                {\href{https://petzko.online}{\emph{petzko.online $|$ Personal Website $|$ Python, DockerCompose, NixOS}}}{March 2020 - Dec 2024}
-                \resumeItemListStart
-                    \resumeItem{
-                        Developed personal portfolio website hosted on personal hardware targetting self-healing and high-availability
-                    }
-                    \resumeItem{
-                        Containerized using Dockerfiles and Docker Compose best practices
-                    }
-                    \resumeItem{
-                        Deployed Splunk and Grafana to monitor docker nodes and to fire alerts when certain conditions are met.
-                    }
-                    \resumeItem{
-                        Setup Nginx ingress / egress Routing rules for docker-compose containers
-                    }
-                \resumeItemListEnd
+
         \resumeSubHeadingListEnd
 
 
@@ -219,14 +200,25 @@
             \small{\item{
                 \textbf{Programming Languages}{: Python, Bash, Go, Groovy/Java, Rust, C++, SQL}\\
                 \textbf{OS Platforms}{: UNIX (Solaris 8,9,10), RHEL (6,7,8,9), Ubuntu, Linux 5/6, NixOS}\\
-                \textbf{CI Tools}{: Jenkins/Hudson, GitLab, ArgoCD, FluxCD }\\
+                \textbf{CI Tools}{: Jenkins/Hudson, GitLab, ArgoCD, FluxCD}\\
                 \textbf{Configuration Management}{: Ansible, Nix, Nginx, Chef, Puppet, ANT, Maven, Make}\\
                 \textbf{Provisioning Tools}{: Terraform, Azure Resource Manager (ARM), Kubernetes, Docker, MiniKube}\\
-                \textbf{Virtualization}{: VMWare, Vagrant, KVM}
+                \textbf{Virtualization}{: VMWare, Vagrant, KVM}\\
+                \textbf{Monitoring \& Observability}{: Prometheus, Grafana, Loki, Splunk}\\
+                \textbf{Messaging \& Auth}{: Kafka, Keycloak}
             }}
         \end{itemize}
-                
 
+
+    \section{Education}
+        \resumeSubHeadingListStart
+            \resumeSubheading
+                {Rowan University}{Glassboro, NJ}
+                {Bachelor Computing and Informatics, Minor CyberSecurity}{2016 - 2020}
+            \resumeSubheading
+                {Rowan University}{Glassboro, NJ}
+                {Bachelor Emergency Management and Homeland Security, Minor Counter-Terrorism}{2016-2020}
         \resumeSubHeadingListEnd
+
 \end{document}
 %== end document ==%
